добавил плагин eslint-prettier

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,11 +5,9 @@ env:
   browser: true
 
 extends:
-  htmlacademy/es6
+  - htmlacademy/es6
+  - prettier
 
 parserOptions:
   ecmaVersion: 2018
   sourceType: module
-
-rules:
-  quotes: single
