--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "csso-webpack-plugin": "2.0.0-beta.1",
     "eslint": "6.5.1",
     "eslint-config-htmlacademy": "0.5.2",
+    "eslint-config-prettier": "6.15.0",
     "gulp": "4.0.x",
     "gulp-imagemin": "5.0.3",
     "gulp-rename": "1.4.0",
