--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "webpack": "4.41.5",
     "webpack-cli": "3.3.11",
     "webpack-dev-server": "3.10.3",
+    "webpack-glsl-loader": "^1.0.1",
     "write-file-webpack-plugin": "4.5.1"
   },
   "scripts": {
